fixing filter jump bug

--- a/app/css/home.css
+++ b/app/css/home.css
@@ -64,8 +64,8 @@ h3 {
 
 input[type="checkbox"] {
   position: absolute;
-  top: -9999px;
-  left: -9999px;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
 }
 
 .switch {
